<resources>
    <string name="app_name">ConsultasQX</string>
    <string-array name="pefil_array">
        <item>Paciente</item>
        <item>Médico</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="consultasqx">ConsultasQX</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="e_mailLogin">E-mail</string>
    <string name="consultasqxLogin">ConsultasQX</string>
    <string name="senhaLogin">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="voltar">Voltar</string>
    <string name="action_settings">Configurações de ação</string>
    <string name="especialidades">Especialidades</string>
    <string name="tipo_pagamento">Tipo de pagamento</string>
    <string name="convenio">Convenio</string>
    <string name="agendar_consulta">Agendar Consulta</string>
    <string name="detalhes_consulta"> Detalhes da Consulta</string>

    <string-array name="especialidades_array">
        <item>Oftalmologia</item>
        <item>Ginecologista</item>
        <item>Dermatologista</item>
        <item>Clinico Geral</item>
        <item>Cardiologista</item>
        <item>Dentista</item>
        <item>Ortopedista</item>
        <item>Neurologista</item>
        <item>Psiquiatra</item>
        <item>Psicologo</item>
        <item>Nutricionista</item>
        <item>Obstetra</item>
    </string-array>

    <string-array name="pagamento_array">
        <item>Particular</item>
        <item>Convênio</item>
    </string-array>

    <string-array name="convenio_array">
        <item>Convenio 1</item>
        <item>Convenio 2</item>
        <item>Convenio 3</item>
        <item>Convenio 4</item>
        <item>Convenio 5</item>
        <item>Convenio 6</item>
    </string-array>
    <string name="title_activity_agendar_consulta">AgendarConsulta</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="todo">TODO</string>
    <string name="Selecione" />
    <string name="selecione">Selecione</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="informe_endere_o_cidade_ou_zip_code">Informe Endereço, Cidade ou Zip Code</string>
    <string name="home">Home</string>
    <string name="marcar_consulta">Marcar consulta</string>
    <string name="hist_rico_de_consultas">Histórico de Consultas</string>
    <string name="mapa">Mapa</string>
    <string name="sair">Sair</string>

    <!--    <string name="especialidades" />-->
    <!--    <string name="tipo_pagamento" />-->
    <!--    <string name="convenio" />-->
    <string name="title_activity_apagar">ApagarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="p_gina_de_usu_rio">Página de usuário</string>
    <string name="tel_cl_nica">Tel. Clínica</string>
    <string name="crm">CRM</string>
    <string name="especialidade">Especialidade</string>
    <string name="Editar" />
    <string name="nome1">Nome</string>
    <string name="n_mero_de_telefone_associado">Número de telefone associado</string>
    <string name="senhaProfile">Senha</string>
    <string name="nome_do_usu_rio">Nome do usuário</string>
    <string name="email">Email</string>
    <string name="todoProfile">TODO</string>
    <string name="todoProfile2">TODO</string>
    <string name="editar1">Editar</string>
    <string name="atualizar_dados">Atualizar dados</string>
    <string name="apagar_conta">Apagar conta</string>
    <string name="local_da_clinica">Local da Clinica</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="conv_nios_aceitos">Convênios Aceitos</string>
    <string name="nomeMedico">Nome</string>
    <string name="especialidades_atendidas">Especialidades Atendidas</string>
    <string name="crmMedico">CRM</string>
    <string name="especialidadesMedico">Especialidades</string>
    <string name="crmMedicoValor">CRM</string>
    <string name="perfil_do_profissional">Perfil do Profissional</string>
    <string name="agendamento">Agendamento</string>
    <string name="_12_00">12:00</string>
    <string name="especialidade_1">Especialidade 1</string>
    <string name="_20_00">20:00</string>
    <string name="selecionar_especialidade">Selecionar especialidade</string>
    <string name="especialidade_2">Especialidade 2</string>
    <string name="especialidade_3">Especialidade 3</string>
    <string name="_15_00">15:00</string>
    <string name="marcar_consulta_de_agendar_consulta">Marcar Consulta</string>
    <string name="selecionar_hor_rio">Selecionar horário</string>
    <string name="escolha_a_data_para_sua_consulta">Escolha a data para sua consulta</string>
    <string name="atualizar_senha">Atualizar senha</string>
</resources>