<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_back_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todoProfile"
                android:onClick="voltarUserProfile"
                android:padding="15dp"
                android:src="@drawable/ic_back_general"
                tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="#FF0000"
            android:padding="20dp">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/todoProfile2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/image_profile"
                android:includeFontPadding="false"
                android:text="@string/nome_do_usu_rio"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/nome">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_profile2"
                    android:drawablePadding="10dp"
                    android:text="@string/nome1"
                    android:textColor="#fff"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/e_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email1"
                    android:drawablePadding="10dp"
                    android:text="@string/email"
                    android:textColor="#fff"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/telefone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone1"
                    android:drawablePadding="10dp"
                    android:text="@string/n_mero_de_telefone_associado"
                    android:textColor="#fff" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/senha">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_senha"
                    android:drawablePadding="10dp"
                    android:text="@string/senhaProfile"
                    android:textColor="#fff"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF0000"
                android:text="@string/editar1"
                android:textColor="#fff"
                android:textColorHint="#F6F0F2"
                tools:ignore="TextContrastCheck,UsingOnClickInXml" />

        </LinearLayout>
            
    </LinearLayout>
</ScrollView>