<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D10202"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    tools:context=".CadastroActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_swash"
        android:gravity="center"
        android:text="@string/consultasqx"
        android:textColor="#FFFFFF"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bck_texto"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#F6F0F2"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bck_texto"
        android:hint="@string/selecione"
        android:textColor="@color/white"
        android:textColorHint="#F6F0F2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bck_texto"
            android:hint="@string/Selecione"
            android:inputType="none"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bck_texto"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#F6F0F2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bck_texto"
        android:drawableStart="@drawable/ic_cpf"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/cpf"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#F6F0F2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextE_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bck_texto"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#F6F0F2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bck_texto"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#F6F0F2"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bck_texto"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/confirme_sua_senha"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#F6F0F2"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bck_botao"
        android:onClick="validarCampos"
        android:text="@string/cadastrar"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonVoltarCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bck_botao"
        android:text="@string/voltar"
        android:textColor="#FFFFFF" />

</LinearLayout>