<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:backgroundTint="#FF0000"
                android:text="@string/marcar_consulta"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:backgroundTint="#FF0000"
                android:text="@string/hist_rico_de_consultas"
                android:textSize="20sp"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMapa"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#FF0000"
                android:onClick="abrirMapa"
                android:text="@string/mapa"
                android:textSize="20sp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:backgroundTint="#FF0000"
                android:onClick="deslogar"
                android:text="@string/sair"
                android:textSize="20sp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>