<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MarcarConsulta">

    <TextView
        android:id="@+id/textViewMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/cherry_swash"
        android:text="ConsultasQX"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEspecialidade"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="124dp"
        android:gravity="left"
        android:text="Especialidade: "
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteEspecialidade"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="24dp"
        android:textSize="20dp"
        android:hint="@string/especialidades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPagamento"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="Pagamento: "
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEspecialidade" />

    <AutoCompleteTextView
        android:id="@+id/autoCompletePagamento"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/tipo_pagamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteEspecialidade" />

    <TextView
        android:id="@+id/textViewConvenio"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="Convênio: "
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPagamento" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteConvenio"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/convenio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompletePagamento" />

    <Button
        android:id="@+id/btnPesquisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="PESQUISAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarca" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMedicos"
        android:layout_width="409dp"
        android:layout_height="390dp"
        android:layout_marginTop="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!--    <ListView-->
    <!--        android:id="@+id/listViewMedicos"-->
    <!--        android:layout_width="409dp"-->
    <!--        android:layout_height="330dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        tools:layout_editor_absoluteX="1dp" />-->


</androidx.constraintlayout.widget.ConstraintLayout>